# Fisher_Kernels

./: .gitignore  CalculateParamsNV.m  Comparing_sEM_with_fitgmdist.asv  Comparing_sEM_with_fitgmdist.m  EM.drawio  EM_Algorithm.asv  EM_Algorithm.m  EM_Algorithm2.asv  EM_Algorithm2.m  Example_of_MLE.m  Final_project.asv  Final_project.m  FisherEncodingNV.asv  FisherEncodingNV.m  Fisher_kernels.asv  Fisher_kernels.m  GMM_NV.asv  GMM_NV.m  MLE_and_MAP.mlx  Negative log-likelihood over Number of Clusters for RGB features.fig  Negative log-likelihood over Number of Clusters for SIFT features.fig  README.md  Responsibilities.asv  Responsibilities.m  Testing_vlfisher.mlx  Toy_Example_GMM.m  assignLabels.asv  assignLabels.m  extractFeatures.asv  extractFeatures.m  extractImageFeatures.asv  extractImageFeatures.m  getGMMparamsAlex.m  gradientVectorsNV.asv  gradientVectorsNV.m  loadGMMparamsAlex.m  pyvenv.cfg  sEM.asv  sEM.m  splitTheDatastore.m  (+4 more)
.tours/: fisher-kernels-code-steps.tour
Project/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  torch-req.txt
Project/matlab/: getGMMparams.m  loadGMMparams.m  matToNpy.m  saveFromPython.m
Project/pygmm/: __main__.py  _config.py  _metrics.py  _utils.py
Scripts/: activate  activate.bat
