[build-system]
requires = ["setuptools~=67.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygmm"
version = "1.0.0"
description = "A runnable package that trains a collection of GMMs using PyCave and exports the results as a MATLAB file."
authors = [
  { name = "Nick Vasilakis" },
  { name = "Alexios Giazitzis" }
]
maintainers = [
  { name = "Nick Vasilakis" },
  { name = "Alexios Giazitzis" }
]
requires-python = ">=3.8,<3.11"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Version Control :: Git",
  "Typing :: Typed",
]

# TODO: change before pushed
[project.urls]
"Source" = "https://bitbucket.org/agiaz/research"
"Bug Tracker" = "https://bitbucket.org/agiaz/research/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "docs", "docs.*"]

[tool.ruff]
line-length = 80
select = ["D", "E", "F"]
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*.py" = ["D107"]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.black]
line-length = 80
target-version = ['py38']
include = '''
(
      \.pyi?$
    | \.py?$
    | ^/tests/
    | ^/src/
)
'''
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | __pycache__
    | buck-out
    | build
    | dist
    | .*/migrations
    | \.github
    | ci
    | node_modules
    | static
    | staticfiles
  )/
  | \.html
  | \.js
  | \.css
  | \.scss
)
'''
